// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render should enable save button 1`] = `
<Page
  navModel={Object {}}
>
  <PageContents
    isLoading={false}
  >
    <h3
      className="page-sub-heading"
    >
      Folder Settings
    </h3>
    <div
      className="section gf-form-group"
    >
      <form
        name="folderSettingsForm"
        onSubmit={[Function]}
      >
        <div
          className="gf-form"
        >
          <label
            className="gf-form-label width-7"
          >
            Name
          </label>
          <Input
            className="gf-form-input width-30"
            onChange={[Function]}
            type="text"
            value="loading"
          />
        </div>
        <div
          className="gf-form-button-row"
        >
          <button
            className="btn btn-primary"
            disabled={false}
            type="submit"
          >
            Save
          </button>
          <button
            className="btn btn-danger"
            disabled={false}
            onClick={[Function]}
          >
            Delete
          </button>
        </div>
      </form>
    </div>
  </PageContents>
</Page>
`;

exports[`Render should render component 1`] = `
<Page
  navModel={Object {}}
>
  <PageContents
    isLoading={false}
  >
    <h3
      className="page-sub-heading"
    >
      Folder Settings
    </h3>
    <div
      className="section gf-form-group"
    >
      <form
        name="folderSettingsForm"
        onSubmit={[Function]}
      >
        <div
          className="gf-form"
        >
          <label
            className="gf-form-label width-7"
          >
            Name
          </label>
          <Input
            className="gf-form-input width-30"
            onChange={[Function]}
            type="text"
            value="loading"
          />
        </div>
        <div
          className="gf-form-button-row"
        >
          <button
            className="btn btn-primary"
            disabled={true}
            type="submit"
          >
            Save
          </button>
          <button
            className="btn btn-danger"
            disabled={false}
            onClick={[Function]}
          >
            Delete
          </button>
        </div>
      </form>
    </div>
  </PageContents>
</Page>
`;
